coloquei os tipos de brigadeiros

--- a/julia.html
+++ b/julia.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tipos de brigadeiro</title>
+    <title>venda de brigadeiros</title>
 </head>
 <body>
     <p style="background-color: cyan;" >olá pessoal</p>
-    <h1> foto dos brigadeiros</h1>
+    <h1> foto dos tipos de brigadeiros</h1>
+    
 </body>
 </html>
