--- a/julia.html
+++ b/julia.html
@@ -11,7 +11,7 @@
     <img src= "https://media-cdn.tripadvisor.com/media/photo-s/12/4d/fd/d9/imagem-do-nosso-cento.jpg">
     <h2> Essa vai mostrar uma lista dos sabores </h2>
     <img src="https://ferlancelottibrigadeiros.files.wordpress.com/2015/03/1619331_702964896410491_555787743_n1.jpg">
-<h3> nossos brigadeiros são feitos no ponto certo de açucar, o melhor é comer sem medo </h3>
-
+<h3> nossos brigadeiros são feitos no ponto certo de açucar, o melhor é poder comer sem medo algum </h3>
+<h4>  </h4>
 </body>
 </html>
