--- a/julia.html
+++ b/julia.html
@@ -12,6 +12,7 @@
     <h2> Essa vai mostrar uma lista dos sabores </h2>
     <img src="https://ferlancelottibrigadeiros.files.wordpress.com/2015/03/1619331_702964896410491_555787743_n1.jpg">
 <h3> nossos brigadeiros são feitos no ponto certo de açucar, o melhor é poder comer sem medo algum </h3>
-<h4>  </h4>
+<h4> nós também fazemos brigadeiros 0 lactóse, vou deixar algumas fotos dele</h4>
+<img src= "">
 </body>
 </html>
